sudoku-solver-deployment.yaml
# sudoku-solver-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: sudoku-solver-deployment
spec:
  replicas: 3  # Adjust as needed
  selector:
    matchLabels:
      app: sudoku-solver
  template:
    metadata:
      labels:
        app: sudoku-solver
    spec:
      containers:
        - name: sudoku-solver-container
          image: 712699700534.dkr.ecr.eu-north-1.amazonaws.com/sudoku_solver_app1:v1
          ports:
            - containerPort: 8080
