sudoku-solver-pod.yaml
apiVersion: v1
kind: Pod
metadata:
  name: sudoku-solver-pod
  labels:
    app: sudoku-solver
spec:
  containers:
  - name: sudoku-solver-container
    image: 712699700534.dkr.ecr.eu-north-1.amazonaws.com/sudoku_solver_app1:v1
    ports:
    - containerPort: 8080
    resources:
      requests:
        memory: "256Mi"   # Adjust as needed
        cpu: "100m"       # Adjust as needed
      limits:
        memory: "512Mi"   # Adjust as needed  
        cpu: "200m"       # Adjust as needed
