sudoku-solver-service.yaml
# sudoku-solver-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: sudoku-solver-service
spec:
  selector:
    app: sudoku-solver
  ports:
    - protocol: TCP
      port: 8080
      targetPort: 8080
  type: LoadBalancer
